portfolio attempt initial 1

--- a/index.html
+++ b/index.html
@@ -1,9 +1,33 @@
-<!DOCTYPE html>
+<!DOCTYPE html>  <!--This is for indicating to browser that it's html-->
+
 <html>
-	<head>
+	<head> <!--head is for containing metadata about the HTML file-->
 		<title>Assignment 0</title>
 	</head>
-	<body>
-		Hello, world!
+	<body> <!--body is for the actual content of the page-->
+		<h1>
+			Catherina's Portfolio
+		</h1>
+		<h2>
+			Welcome to my works for CSCI1300!
+		</h2>
+		<div> <!--Division for Actual Stuff-->
+			<table>
+				<tr>
+					<th>Project Image</th>
+					<th>Project Name</th>
+				</tr>
+				<tr>
+					<td><img src="https://c.tenor.com/0sRqUfe4XHwAAAAC/duck-cute.gif"/></td>
+					<td>Daku</td>
+				</tr>
+				<tr>
+					<td><img src="https://www.clipartmax.com/png/middle/142-1424021_cute-rabbit-cartoon-cute-bunny-cartoon-png.png"/></td>
+					<td>Bunnie</td>
+				</tr>
+			</table>
+		<a href="https://google.com">Go search more cute stuff</a>
+		</div>
+
 	</body>
 </html>
